# YonderClaw

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  setup.bat  test-phase1-hardening.mjs  test-phase1-session.mjs
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop-packages/win32-x64/: README.md  package.json
desktop/src/: App.tsx  main.tsx  store.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: autoconnect.rs  claude.rs  lib.rs  main.rs  pty.rs  watcher.rs
docs/: CNAME  hive-architecture.html  index-v2-round2-backup.html  index.html
installer/: auto-start.ts  brand.ts  core-scaffold.ts  dashboard-config-writer.ts  dashboard-generator.ts  detect.ts  index.ts  module-loader.ts  questionnaire.ts  research.ts  scaffold-from-config.ts  task-generator.ts  test-update-preserves-state.ts
installer/templates/: agent-custom.ts.txt  agent-cycle.bat.txt  agent-outreach.ts.txt  build-dashboard.cjs.txt  capabilities.md.txt  continuity-cloud-sync.cjs.txt  cron-manager.ts.txt  dashboard-helper.cjs.txt  dashboard-panels.md.txt  dashboard.html.txt  db.ts.txt  decision-log.md.txt  detect-session.bat.txt  first-launch-checklist.md.txt  health-check.ts.txt  heartbeat-refresh.ts.txt  heartbeat.json.txt  inbox-agent.ts.txt  journey-log-criterion.md.txt  journey-log.md.txt  launch.bat.txt  logic-log.md.txt  memory-md.txt  observability.ts.txt  operator-profile.md.txt  persistence-audit.md.txt  power-tips.md.txt  (+12 more)
(+101 files in other folders)
