[package]
name = "yonderclaw-desktop"
version = "3.7.1"
description = "YonderClaw desktop shell"
authors = ["Yonder Zenith LLC"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "yonderclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
notify = "6"

[features]
custom-protocol = ["tauri/custom-protocol"]
